# security-tools

./: pyproject.toml
.github/workflows/: eval-unpacker-ci.yml
docs/: CHEATSHEET.md
reports/pcap-profiler/: capture_20251109-005455.txt  capture_20251109-042804.json  capture_20251109-042809.csv  qi_local_SYNACK_curl_jsonip_20251109-044952.csv  qi_local_SYNACK_curl_jsonip_20251109-044952.json
reports/vt/: capture_20251109-005455_viruscheck.json  capture_20251109-005455_viruscheck.md  qi_local_SYNACK_curl_jsonip_20251109-044952_viruscheck.json  qi_local_SYNACK_curl_jsonip_20251109-044952_viruscheck.md
tools/: winlog-triage
tools/Pcap-profiler/: MANIFEST.in  README.md  README_PCAP_PROFILER.md  __init__.py  pcap_profiler.py  pyproject.toml  requirements.txt  vt_check_ips.py
tools/Pcap-profiler/enrichment/: allowlist.json
tools/Pcap-profiler/reports/pcap-profiler/: qi_local_SYNACK_curl_jsonip_20251109-002109.txt
tools/Pcap-profiler/samples/: demo_small.pcap
tools/Pcap-profiler/src/pcap_quick_profiler/: __init__.py  pcap_profiler.py
tools/Pcap-profiler/src/pcap_quick_profiler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/eval-unpacker/: LICENSE  ReadME.md  example.js  gitignore  pyproject.toml
tools/eval-unpacker/eval_unpacker/: __init__.py  cli.py  core.py
tools/eval-unpacker/tests/: test_smoke.py
tools/winlog-triage/: requirements.txt  wintriage.py
